[package]
name = "cfx_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "cfx_core"
path = "src/lib.rs"

[dependencies]
async-nats = "0.46.0"
base64 = "0.21.0"
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["password"] }
dirs = "6.0.0"
futures-util = "0.3"
libc = "0.2"
nats-jwt = "0.3.0"
nkeys = "0.4.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tempfile = "3"
sysinfo = "0.33"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
toml = "1.0.3"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
pythonize = "0.28"
