[package]
name = "mach"
version = "0.0.1"
edition = "2024"
homepage = "https://clickswave.org"
repository = "https://github.com/clickswave/mach"
keywords = ["asset-discovery", "security", "red-teaming", "stateful"]
authors = ["Clickswave <hi@clickswave.org>"]

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
clap = { version = "4.5.42", features = ["derive"] }
whoami = { version = "2.0.0-pre.2", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
sha2 = "0.10.9"
serde_json = { version = "1.0.142", features = [] }
reqwest = { version = "0.12.22", features = ["cookies"] }
ratatui = { version = "0.30.0-alpha.5", features = ["crossterm"] }
crossterm = "0.29.0"
csv = { version = "1.3.1"}
rand = "0.9.2"
uuid = { version = "1.18.0", features = ["v4"] }
base64 = "0.22.1"
toml = "0.8"
dirs = "5"
dialoguer = "0.11"