[package]
name = "pulse"
version = "0.0.2"
edition = "2024"
homepage = "https://clickswave.org"
repository = "https://github.com/clickswave/pulse"
keywords = ["network-discovery", "port-scanning", "security", "red-teaming"]
authors = ["Clickswave <hi@clickswave.org>"]

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = [] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
sha2 = "0.10.9"
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.2"
ratatui = { version = "0.30.0-alpha.5", features = ["crossterm"] }
crossterm = "0.29.0"
toml = "0.8"
dirs = "5"
dialoguer = "0.11"
csv = "1.3.1"
